Fix text wrapping

--- a/client/src/app/components/task-list/task-list.component.scss
+++ b/client/src/app/components/task-list/task-list.component.scss
@@ -489,6 +489,7 @@ input[type=text] {
 
             span.text {
                 display: inline-block;
+                width: 100%;
                 margin: 16px;
                 user-select: none;
                 white-space: pre-line;
